[package]
name = "get-nhk-radio-url"
authors = ["Seiichi Horie"]
version = "1.0.0"
edition = "2024"
description = "らじるらじるのリアルタイム・ストリーミングを保存する"

[dependencies]
# CLI argument parser
clap = { version = "4.x", features = ["derive"] }
clap_complete = "4.x"
# Getting object through internet
reqwest = {version = "0.12", features=["blocking"]}
# XML parser
quick-xml = "0.37"
chrono = "0.4.41"
dirs = "6.0.0"
